2003-11-14  Arnaud Charlet  <charlet@act-europe.fr>

	* Makefile.in (POSTSTAGE1_FLAGS_TO_PASS): Pass ADAFLAGS.

2003-11-14  Richard Sandiford  <rsandifo@redhat.com>

	* config/frv/frv.c (frv_in_small_data_p): Return false for unknown
	section names.

2003-11-14  Jason Merrill  <jason@redhat.com>

	PR middle-end/12526
	* tree.c (build): A CALL_EXPR has side-effects if its arguments do.
	* calls.c (call_expr_flags): New fn.
	* tree.h: Declare it.

2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm (__udivsi3): Remove.
	(divmodsi3): Change the name to ___udivsi3.
	Update all callers.

2003-11-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libgcc2.c (__negdi2, __addvsi3, __addvdi3, __subvsi3, __subvdi3,
	__mulvsi3, __negvsi2, __negvdi2, __mulvdi3, __lshrdi3, __ashldi3,
	__ashrdi3, __ffsDI2, __muldi3, __clzDI2, __ctzDI2, __parityDI2,
	__udivmoddi4, __divdi3, __moddi3, __cmpdi2, __ucmpdi2,
	__fixunstfDI, __fixunsxfDI, __fixunsdfDI, __fixunssfDI,
	__floatdixf, __floatditf, __floatdidf, __floatdisf, __gcc_bcmp):
	Const-ify and/or initialize automatic variables at declaration.

2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm (divmodsi4): Replace all the uses
	of er4 with er3.  Adjust all callers.

2003-11-13  Andrew Pinski <apinski@apple.com>

	* config/darwin.c (machopic_output_possible_stub_label): 
	Allow stub symbol be not defined when outputting possible 
	stub label.

2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm (___udivsi3): Jump to reti
	instead of exitdiv.
	(___umodsi3): Likewise.
	(exitdiv): Do not restore any register.
	(reti): Restore registers.

2003-11-13  Steven Bosscher  <stevenb@suse.de>

	* tree-inline.c (walk_tree): Handle PLACEHOLDER_EXPR.

2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm: Fix comment typos.

2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/lib1funcs.asm (udivsi3): Don't save/restore