@@ -1,3 +1,8 @@
+2003-11-14  Eric Christopher  <echristo@redhat.com>
+
+	* reload1.c (reload): Revert previous patch. Make
+	check for assignment into reg_equiv_address stricter.
+
 2003-11-14  Arnaud Charlet  <charlet@act-europe.fr>
 
 	* Makefile.in (POSTSTAGE1_FLAGS_TO_PASS): Pass ADAFLAGS.
@@ -37,8 +42,8 @@
 
 2003-11-13  Andrew Pinski <apinski@apple.com>
 
-	* config/darwin.c (machopic_output_possible_stub_label): 
-	Allow stub symbol be not defined when outputting possible 
+	* config/darwin.c (machopic_output_possible_stub_label):
+	Allow stub symbol be not defined when outputting possible
 	stub label.
 
 2003-11-13  Kazu Hirata  <kazu@cs.umass.edu>
